--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.21",
+    "@nextui-org/link": "^2.0.22",
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
+    "@nextui-org/table": "^2.0.23",
     "@nextui-org/theme": "^2.1.9",
+    "@nextui-org/tooltip": "^2.0.24",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
