--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.21",
+    "@nextui-org/input": "^2.1.9",
     "@nextui-org/link": "^2.0.22",
+    "@nextui-org/modal": "^2.0.23",
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/table": "^2.0.23",
